--- a/app/src/main/res/layout/item_actor_cast_movie_recycler_view.xml
+++ b/app/src/main/res/layout/item_actor_cast_movie_recycler_view.xml
@@ -1,45 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="130dp"
-    android:layout_height="180dp"
-    android:layout_marginStart="@dimen/cardview_start"
-    android:layout_marginTop="@dimen/card_view_margin_top"
-    android:layout_marginEnd="@dimen/cardview_end_actor"
-    android:elevation="@dimen/cardview_elevation"
-    app:cardUseCompatPadding="true"
-    app:cardCornerRadius="@dimen/cardview_corner_radius">
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/castMovieImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@mipmap/ic_launcher" />
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/castMovieTitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="@tools:sample/lorem" />
+        android:layout_margin="4dp"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Twin Peaks" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/castMovieYearTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="@tools:sample/date/ddmmyy" />
+        android:layout_margin="4dp"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/castMovieTitleTextView"
+        app:layout_constraintStart_toEndOf="@+id/castMovieTitleTextView"
+        app:layout_constraintTop_toTopOf="@+id/castMovieTitleTextView"
+        tools:text="2022" />
+
+    <TextView
+        android:id="@+id/slash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:textSize="12sp"
+        android:text="@string/slash"
+        app:layout_constraintBottom_toBottomOf="@+id/castMovieYearTextView"
+        app:layout_constraintStart_toEndOf="@id/castMovieYearTextView"
+        app:layout_constraintTop_toTopOf="@+id/castMovieTitleTextView" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/castMovieRoleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="@tools:sample/lorem" />
-</LinearLayout>
-</androidx.cardview.widget.CardView>
+        android:layout_margin="4dp"
+        android:textSize="10sp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:singleLine="true"
+        app:layout_constraintStart_toEndOf="@id/slash"
+        app:layout_constraintBottom_toBottomOf="@+id/castMovieYearTextView"
+        app:layout_constraintTop_toTopOf="@+id/castMovieYearTextView"
+        tools:text="Agent Cooper" />
+</androidx.constraintlayout.widget.ConstraintLayout>
