--- a/app/src/main/res/layout/fragment_actor_info.xml
+++ b/app/src/main/res/layout/fragment_actor_info.xml
@@ -77,6 +77,15 @@
             app:layout_constraintTop_toBottomOf="@+id/actorPhotoImageView"
             tools:text="@tools:sample/lorem" />
 
+        <View
+            android:id="@+id/viewAfterBio"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:layout_margin="4dp"
+            android:background="@color/grey"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/actorBioTextView" />
+
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/actorKnownForMoviesTitleTextView"
             android:layout_width="match_parent"
@@ -85,7 +94,7 @@
             android:text="@string/known_for_movies"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/actorBioTextView" />
+            app:layout_constraintTop_toBottomOf="@+id/viewAfterBio" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/actorKnownForRecyclerView"
@@ -120,7 +129,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/actorCastMovieRecyclerView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:background="@drawable/shape_background_poster"
