--- a/app/src/main/res/layout/item_movie_recycler_view.xml
+++ b/app/src/main/res/layout/item_movie_recycler_view.xml
@@ -31,7 +31,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:minLines="2"
-            android:textSize="@dimen/text_size_title"
+            android:textAlignment="center"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/moviePosterImageView"
@@ -42,7 +43,7 @@
             android:id="@+id/dateOfReleaseTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size_date_release"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/titleMovieTextView"
