add usecases and add SavedMovieListFragment.kt + adapter + viewmodel
change converter type - need to fix to work with generic

--- a/app/src/main/res/menu/bottom_menu_navigation.xml
+++ b/app/src/main/res/menu/bottom_menu_navigation.xml
@@ -15,7 +15,7 @@
 
     <item
         android:id="@+id/bottom_bar_fav"
-        android:icon="@drawable/favourite_ic"
+        android:icon="@drawable/ic_my_list"
         android:title="@string/favourite"
         app:showAsAction="always" />
 
