--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -21,6 +21,14 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/killingeve_back" />
 
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/saveToMyListImageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_my_list"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/smallMoviePosterImageView"
             android:layout_width="100dp"
