--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -49,7 +49,7 @@
             android:padding="@dimen/padding_4dp"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/titleInfoTextView"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
             tools:backgroundTint="@color/black"
             tools:text="4.5" />
@@ -82,7 +82,8 @@
             android:layout_margin="4dp"
             android:textSize="@dimen/text_size_title_info"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/movieRatingTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.125"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toBottomOf="@+id/backgroundPosterImageView"
             tools:text="Killing Eve: Second Season" />
@@ -164,7 +165,6 @@
             app:layout_constraintStart_toEndOf="@+id/movieRunTimeLabelTextView"
             app:layout_constraintTop_toBottomOf="@+id/movieDirectorTextView"
             tools:text="97 min." />
-
 
         <TextView
             android:id="@+id/movieOverviewTextView"
