--- a/app/src/main/res/drawable-anydpi/ic_my_list_enabled.xml
+++ b/app/src/main/res/drawable-anydpi/ic_my_list_enabled.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#328888"
+    android:tint="#E55D33"
     android:alpha="0.6">
   <path
       android:fillColor="@android:color/white"
