change save item layout

--- a/app/src/main/res/layout/item_saved_movie.xml
+++ b/app/src/main/res/layout/item_saved_movie.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/cardview_start"
     android:layout_marginTop="@dimen/card_view_margin_top"
@@ -29,20 +29,21 @@
             android:id="@+id/titleMovieTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:minLines="2"
+            android:padding="@dimen/padding_4dp"
             android:textAlignment="center"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/moviePosterImageView"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/moviePosterImageView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/moviePosterImageView"
             tools:text="Killing Eve" />
 
         <TextView
             android:id="@+id/dateOfReleaseTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="@+id/titleMovieTextView"
             app:layout_constraintStart_toStartOf="@+id/titleMovieTextView"
             app:layout_constraintTop_toBottomOf="@+id/titleMovieTextView"
             tools:text="10 April 2019" />
@@ -51,12 +52,12 @@
             android:id="@+id/movieRatingTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="8dp"
+            android:padding="8dp"
             android:background="@drawable/rounded_shape"
-            android:padding="@dimen/padding_4dp"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/moviePosterImageView"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:backgroundTint="@color/black"
             tools:text="4.5" />
     </androidx.constraintlayout.widget.ConstraintLayout>
