--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,25 +7,53 @@
     <fragment
         android:id="@+id/actorInfoFragment"
         android:name="com.example.moviepagination.presentation.ActorInfoFragment"
-        android:label="ActorInfoFragment" />
+        android:label="ActorInfoFragment" >
+        <action
+            android:id="@+id/action_actorInfoFragment_to_movieInfoFragment"
+            app:destination="@id/movieInfoFragment" />
+    </fragment>
     <fragment
         android:id="@+id/movieInfoFragment"
         android:name="com.example.moviepagination.presentation.MovieInfoFragment"
-        android:label="MovieInfoFragment" />
+        android:label="MovieInfoFragment" >
+        <action
+            android:id="@+id/action_movieInfoFragment_to_actorInfoFragment"
+            app:destination="@id/actorInfoFragment" />
+        <argument
+            android:name="itemId"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
     <fragment
         android:id="@+id/movieListFragment"
         android:name="com.example.moviepagination.presentation.MovieListFragment"
-        android:label="MovieListFragment" />
+        android:label="MovieListFragment" >
+        <action
+            android:id="@+id/action_movieListFragment_to_movieInfoFragment"
+            app:destination="@id/movieInfoFragment" />
+    </fragment>
     <fragment
         android:id="@+id/savedMovieListFragment"
         android:name="com.example.moviepagination.presentation.SavedMovieListFragment"
-        android:label="SavedMovieListFragment" />
+        android:label="SavedMovieListFragment" >
+        <action
+            android:id="@+id/action_savedMovieListFragment_to_movieInfoFragment"
+            app:destination="@id/movieInfoFragment" />
+    </fragment>
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.example.moviepagination.presentation.SearchFragment"
-        android:label="SearchFragment" />
+        android:label="SearchFragment" >
+        <action
+            android:id="@+id/action_searchFragment_to_movieInfoFragment"
+            app:destination="@id/movieInfoFragment" />
+    </fragment>
     <fragment
         android:id="@+id/top250Fragment"
         android:name="com.example.moviepagination.presentation.Top250Fragment"
-        android:label="Top250Fragment" />
+        android:label="Top250Fragment" >
+        <action
+            android:id="@+id/action_top250Fragment_to_movieInfoFragment"
+            app:destination="@id/movieInfoFragment" />
+    </fragment>
 </navigation>
