--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -11,6 +11,10 @@
         <action
             android:id="@+id/action_actorInfoFragment_to_movieInfoFragment"
             app:destination="@id/movieInfoFragment" />
+        <argument
+            android:name="actorId"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/movieInfoFragment"
