--- a/app/src/main/res/menu/bottom_menu_navigation.xml
+++ b/app/src/main/res/menu/bottom_menu_navigation.xml
@@ -2,28 +2,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_list"
+        android:id="@+id/movieListFragment"
         android:icon="@drawable/home"
         android:title="@string/home"
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/menu_search"
+        android:id="@+id/searchFragment"
         android:icon="@drawable/ic_search"
         android:title="@string/menu_search"
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/menu_saved"
+        android:id="@+id/savedMovieListFragment"
         android:icon="@drawable/ic_my_list"
         android:title="@string/favourite"
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/menu_top250"
+        android:id="@+id/top250Fragment"
         android:icon="@drawable/ic_top250"
         android:title="@string/top250"
         app:showAsAction="always" />
-
-
 </menu>
