add russian translation in string values

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,5 +17,6 @@
     <style name="StyleBottomNavigationView" parent="Widget.MaterialComponents.BottomNavigationView">
         <item name="backgroundTint">@color/design_default_color_secondary</item>
         <item name="itemTextColor">@color/black</item>
+        <item name="android:windowBackground">@color/background</item>
     </style>
 </resources>
